<resources>
    <string name="app_name">Team Work</string>
    <string name="team_work_mission">Fostering team building and bonding</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_user_options">UserOptions</string>
    <string name="title_home">Home</string>
    <string name="title_post">Previous Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_users_post">UsersPost</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="post_article">Post Article</string>
    <string name="article_description">Article Description</string>
    <string name="post_image">Post Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ? You would\'nt be able to view posts if you do.</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="udoh_jeremiah">Udoh Jeremiah</string>
    <string name="nigeria">Nigeria</string>
    <string name="flag">Flag</string>
    <string name="title_activity_article_comment">ArticleComment</string>
    <string name="title_activity_image_comment">ImageComment</string>
    <string name="post_article_or_image">Post Article or Image</string>
    <string name="about">About</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>
    <string name="gender">Gender</string>
    <string name="job_role">Job Role</string>
    <string name="address">Address</string>
</resources>
