<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_nobg"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/logMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:lineSpacingMultiplier="1.2"
            android:padding="10dp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="90dp"
            android:paddingTop="12dp"
            android:paddingRight="90dp"
            android:paddingBottom="12dp"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logMessage"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/logMessage"
            app:layout_constraintTop_toBottomOf="@id/logMessage" />

        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_nobg"
            android:paddingLeft="90dp"
            android:paddingTop="12dp"
            android:paddingRight="90dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnLogOut"
            app:layout_constraintStart_toStartOf="@+id/btnLogOut"
            app:layout_constraintTop_toBottomOf="@id/btnLogOut" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>