<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/usersImg"
                android:layout_width="116dp"
                android:layout_height="93dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/btnFullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/udoh_jeremiah"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/usersImg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nigeria"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/usersImg"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/PostContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:letterSpacing="15"
                android:padding="7dp"
                android:text="Implement Swipe Views; Add Tabs Using a TabLayout ... This topic teaches you how to create a tab layout with swipe views for switching between ... return"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pTitle"
                app:lineHeight="20dp" />

            <Button
                android:id="@+id/btnComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_comment_black_24dp"
                android:paddingEnd="5dp"
                android:drawablePadding="10dp"
                android:text="@string/comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PostContent"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btnFlag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_flag_black_24dp"
                android:drawablePadding="10dp"
                android:paddingEnd="10dp"
                android:text="@string/flag"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/btnComment"
                app:layout_constraintTop_toBottomOf="@+id/PostContent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:padding="5dp"
                android:text="2 months ago"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/btnFlag"
                app:layout_constraintTop_toBottomOf="@+id/PostContent"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</FrameLayout>