<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".PostArticle">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorWhite"
        app:cardElevation="10dp"
        app:cardCornerRadius="12dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/postHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/post_article"
                android:textSize="17sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/postHeading"
                app:layout_constraintStart_toStartOf="@+id/postHeading"
                app:layout_constraintTop_toBottomOf="@+id/postHeading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_title_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPost"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@+id/layoutTitle"
                app:layout_constraintStart_toStartOf="@+id/layoutTitle"
                app:layout_constraintTop_toBottomOf="@+id/layoutTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postArticle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_textsms_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/article_description"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/subArticle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="35dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/layoutPost"
                app:layout_constraintStart_toStartOf="@+id/layoutPost"
                app:layout_constraintTop_toBottomOf="@+id/layoutPost"
                android:text="@string/post_article"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.core.widget.NestedScrollView>