<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="45dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="0dp"
            android:layout_height="155dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/teamwork"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_mission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/team_work_mission"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="@id/imgLogo"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <View
            android:id="@+id/viewUnderline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="@+id/txt_mission"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_mission"
            app:layout_constraintTop_toBottomOf="@+id/txt_mission" />

        <LinearLayout
            android:id="@+id/linearToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/viewUnderline"
            app:layout_constraintStart_toStartOf="@+id/viewUnderline"
            app:layout_constraintTop_toBottomOf="@+id/viewUnderline">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:textStyle="bold"
                android:gravity="center"
                android:text="Login Form"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="@+id/linearToggle"
            app:layout_constraintStart_toStartOf="@+id/linearToggle"
            app:layout_constraintTop_toBottomOf="@+id/linearToggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="@+id/layoutEmail"
            app:layout_constraintStart_toStartOf="@+id/layoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="15dp"
                android:fontFamily="@font/source_code_pro"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutPass"
            app:layout_constraintStart_toStartOf="@+id/layoutPass"
            app:layout_constraintEnd_toEndOf="@+id/layoutPass"
            android:textSize="17sp"
            android:padding="12dp"
            android:textStyle="bold"
            app:cornerRadius="4dp"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"/>

<!--        textView for displaying time-->
        <TextView
            android:id="@+id/displayTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>