<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:padding="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="120dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="UselessLeaf">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/pFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="7dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/nameCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="12dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/layoutName">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/nameCard"
                app:layout_constraintStart_toStartOf="@+id/nameCard"
                app:layout_constraintTop_toBottomOf="@id/nameCard"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/lGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="50dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorBlack" />

                <TextView
                    android:id="@+id/lEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email_address"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="50dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorBlack" />

                <TextView
                    android:id="@+id/lDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/department"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="50dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorBlack" />

                <TextView
                    android:id="@+id/lJobRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/job_role"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pJobRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="50dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorBlack" />

                <TextView
                    android:id="@+id/lAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:padding="7dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteY="50dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>